--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "@microsoft/sp-core-library": "1.5.0",
     "@microsoft/decorators": "1.5.0",
-    "@types/webpack-env": "1.13.1",
-    "@types/es6-promise": "0.0.33",
+    "@microsoft/sp-application-base": "1.5.0",
+    "@microsoft/sp-core-library": "1.5.0",
     "@microsoft/sp-dialog": "1.5.0",
-    "@microsoft/sp-application-base": "1.5.0"
+    "@types/es6-promise": "0.0.33",
+    "@types/jquery": "^3.3.4",
+    "@types/webpack-env": "1.13.1",
+    "sp-pnp-js": "^3.0.10"
   },
   "devDependencies": {
     "@microsoft/sp-build-web": "1.5.0",
